--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -141,12 +141,12 @@ header {
     text-align: center;
     color: rgb(70, 99, 172); 
     width: 100%; 
-    padding: 0 20px; 
     width: 700px; 
     height: 175px; 
     background: white; 
     border-radius: 8px; 
     padding: 20px; 
+    flex: 1;
 }
 /*Creates space between the two sections in my description for better readability */
 .description section {
@@ -172,12 +172,12 @@ header {
     text-align: center;
     color: rgb(70, 99, 172); 
     width: 100%; 
-    padding: 0 20px; 
     width: 700px; 
     height: 250; 
     background: white; 
     border-radius: 8px; 
     padding: 20px;  
+    flex: 1;
 }
 /*Creates space between the two sections in my description for better readability */
 .description_2 section {
@@ -312,6 +312,20 @@ input[type="submit"], input[type="reset"] {
         align-items: center;
         flex-direction: column;
     }
+    .description, .description_2, .centre, .intro_description {
+        width: 66%;
+    }
+    /*Removes all the spacing so it will fit into the column*/
+    #right-column {
+        margin: 0;
+    }
+    /*Ensures that the images will not grow or shirnk when changing the window size and will continue to take up the whole width*/
+    /*Added extra space when getting smaller*/
+    .network-image, .network-image_2, .profile-image {
+        flex: 0 0 100%;
+        margin: 0 0 20px;
+    }
+    
 }
 
 /*This is the fluid design for moblie size*/
@@ -320,5 +334,19 @@ input[type="submit"], input[type="reset"] {
     #header {
         align-items: center;
         flex-direction: column;
+    }
+    .description, .description_2, .centre, .intro_description {
+        width: 33%;
+    }
+    /*Removes all the spacing so it will fit into the column*/
+    #right-column {
+        margin: 0;
+    }
+
+    /*Ensures that the images will not grow or shirnk when changing the window size and will continue to take up the whole width*/
+    /*Added extra space when getting smaller*/
+    .network-image, .network-image_2, .profile-image {
+        flex: 0 0 100%;
+        margin: 0 0 20px;
     }
 }
