--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -229,6 +229,7 @@ header {
     padding: 20px; 
     background: white; 
     border-radius: 8px; 
+    margin: 10px
 }
 
 /*##############################################################*/
