--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -340,12 +340,15 @@ input[type="submit"], input[type="reset"] {
         align-items: center;
         flex-direction: column;
     }
-    .description, .description_2, .centre, .intro_description {
+    .description, .description_2, .centre {
         width: 33%;
     }
     /*Removes all the spacing so it will fit into the column*/
     #right-column {
         margin: 0;
+    }
+    .intro_description {
+        font-size: 1rem;
     }
 
     /*Ensures that the images will not grow or shirnk when changing the window size and will continue to take up the whole width*/
