--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -225,6 +225,7 @@ header {
     text-align: center;
     color: rgb(70, 99, 172); 
     width: 90%; 
+    max-width: 700px;
     padding: 20px; 
     background: white; 
     border-radius: 8px; 
